# ros2-moveit2-dual-arm

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
src/my_robot_description/: package.xml
src/my_robot_description/urdf/: arm.xacro  common_properties.xacro  my_robot.urdf.xacro  ros2_control.xacro
src/my_robot_movit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_robot_movit_config/config/: joint_limits.yaml  moveit_controllers.yaml  my_robot.srdf  ros2_controllers.yaml
src/my_robot_movit_config/launch/: demo.launch.py  demo_jsp.launch.py  spawn_controllers.launch.py
src/my_robot_movit_config/scripts/: plan_animator.py
