<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.0</version>
  <description>Dual-arm robot URDF/Xacro description for MoveIt 2</description>
  <maintainer email="aashish0415@gmail.com">Aashish</maintainer>
  <license>BSD-3-Clause</license>
  <author email="aashish0415@gmail.com">Aashish</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
